# arc-cli

./: .gitignore  ARC.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Cross.toml  Dockerfile  LICENSE  SECURITY.md  check.json  check_tools.json  clippy.toml  deny.toml  fix_cargo.ps1  index.html  install.ps1  install.sh  push.bat  readme.md  release-notes.md  release-plz.toml  run_check.ps1  rustfmt.toml
.arc/: hooks.toml
.cargo/: config.toml
.github/: FUNDING.yml  dependabot.yml  pull_request_template.md
arc-cli-docs/: index.html  vercel.json
bench/: e2e_bench.sh
benches/: README.md  checkpoint_io.rs  cold_boot.rs  concurrent_agents.rs  config_parsing.rs  diff_rendering.rs  hook_execution.rs  memory_compression.rs  plugin_loading.rs  provider_routing.rs  session_snapshot.rs  sse_parser.rs  worktree_operations.rs
crates/arc-a2a/: Cargo.toml
crates/arc-a2a/src/: auth.rs  client.rs  discovery.rs  error.rs  lib.rs  protocol.rs  server.rs  streaming.rs  task.rs
crates/arc-a2a/src/middleware/: auth.rs  mod.rs
crates/arc-agents/: Cargo.toml
crates/arc-agents/src/: contracts.rs  extensions.rs  lib.rs  orchestrator.rs  registry.rs  routing.rs  sub_agent.rs
crates/arc-bench/: Cargo.toml
crates/arc-bench/benches/: main.rs  swe_bench.rs
crates/arc-bench/src/: evaluator.rs  lib.rs  suites.rs
crates/arc-cli/: Cargo.toml  build.rs
crates/arc-cli/src/: cli.rs  main.rs  repl.rs  telemetry.rs
crates/arc-cli/src/commands/: config.rs  diagnostic.rs  doctor.rs  extensions.rs  fix.rs  graph.rs  init.rs  mod.rs  review.rs  security_doctor.rs  stats.rs  update.rs
crates/arc-cloud/: Cargo.toml
crates/arc-cloud/src/: delegation.rs  lib.rs  result_poll.rs
crates/arc-compact/: Cargo.toml
crates/arc-compact/src/: lib.rs  sliding_window.rs  summarize.rs  tokenizer.rs
crates/arc-core/: Cargo.toml
crates/arc-core/benches/: config_loading.rs  memory_compression.rs
crates/arc-core/src/: agent.rs  agent_defs.rs  agent_teams.rs  approval.rs  auto_memory.rs  background_tasks.rs  billing.rs  budget.rs  checkpoint.rs  compaction.rs  config.rs  context_file.rs  copy_picker.rs  credentials.rs  cron.rs  effort.rs  error.rs  extended_features.rs  feature_flags.rs  hooks.rs  hot_reload_skills.rs  http_hooks.rs  ide_detect.rs  instance_lock.rs  jit_context.rs  lib.rs  loop_detection.rs  model_picker.rs  models.rs  network.rs  permissions.rs  plan_mode.rs  planner.rs  platform.rs  plugin_marketplace.rs  pr_review.rs  prompt_registry.rs  ralph_loop.rs  sandbox_policy.rs  security_review.rs  (+12 more)
crates/arc-core/src/auth/: api_key.rs  mod.rs  oauth_google.rs
crates/arc-core/src/memory/: arena.rs  compressor.rs  long_term.rs  mod.rs  observation.rs  session_store.rs  short_term.rs  working.rs
crates/arc-core/src/security/: audit.rs  config_guard.rs  context_sanitizer.rs  credential_manager.rs  data_guard.rs  env_keys.rs  env_sanitizer.rs  folder_trust.rs  landlock.rs  mod.rs  oauth_hardened.rs  prompt_guard.rs  rate_limiter.rs  session_guard.rs  shadow.rs
crates/arc-core/src/telemetry/: advanced.rs  mod.rs  store.rs  types.rs
crates/arc-core/tests/: config_roundtrip.rs  rate_limiter.rs  telemetry_store.rs
crates/arc-fork/: Cargo.toml
crates/arc-fork/src/: fork.rs  lib.rs  selective_rewind.rs  snapshot.rs
crates/arc-hooks/: Cargo.toml
crates/arc-hooks/src/: config.rs  engine.rs  events.rs  executor.rs  git_intel.rs  lib.rs  matcher.rs  rewrite.rs  security_presets.rs
crates/arc-loop/: Cargo.toml
crates/arc-loop/src/: cron.rs  lib.rs  recurring.rs  scheduler.rs  watcher.rs
crates/arc-mcp/: Cargo.toml
crates/arc-mcp/src/: client.rs  lib.rs  security.rs  tools.rs
crates/arc-plan/: Cargo.toml
crates/arc-plan/src/: dependency_mapper.rs  lib.rs  plan_model.rs  plan_renderer.rs  planner.rs  read_only_tools.rs  tracker.rs
crates/arc-providers/: Cargo.toml
crates/arc-providers/benches/: streaming_parse.rs
crates/arc-providers/src/: anthropic.rs  availability.rs  breaker.rs  fallback.rs  gemini.rs  google.rs  http_pool.rs  lib.rs  message.rs  mock.rs  ollama.rs  openai.rs  openai_compat.rs  provider.rs  router.rs  routing.rs  stream.rs  streaming.rs  traits.rs
crates/arc-providers/src/security/: http_client.rs  mod.rs
crates/arc-providers/tests/: sse_parsing.rs
crates/arc-remote/: Cargo.toml
crates/arc-remote/src/: auth.rs  client.rs  lib.rs  protocol.rs  server.rs
crates/arc-repomap/: Cargo.toml
crates/arc-repomap/src/: lib.rs
crates/arc-repomap/tests/: repomap_e2e.rs
crates/arc-router/: Cargo.toml
crates/arc-router/src/: classifier.rs  lib.rs  parallel.rs  router.rs  tracker.rs
crates/arc-sandbox/: Cargo.toml
crates/arc-sandbox/src/: lib.rs  linux.rs  macos.rs  windows.rs
crates/arc-session/: Cargo.toml
crates/arc-session/src/: checkpoint.rs  fork.rs  lib.rs  rewind.rs  session_db.rs  session_model.rs  summary.rs
crates/arc-shadow/: Cargo.toml
crates/arc-shadow/src/: lib.rs  workspace.rs
crates/arc-tools/: Cargo.toml
crates/arc-tools/src/: file_edit.rs  file_read.rs  lib.rs  registry.rs  shell.rs  traits.rs
crates/arc-tools/src/security/: mod.rs  path_guard.rs  sandbox.rs
crates/arc-tui/: Cargo.toml
crates/arc-tui/src/: app.rs  diff.rs  lib.rs  progress.rs  spinner.rs  ui.rs
crates/arc-tui/tests/: spinner_smoke.rs
crates/arc-voice/: Cargo.toml
crates/arc-voice/src/: audio_capture.rs  languages.rs  lib.rs  push_to_talk.rs  streaming.rs  stt_engine.rs  voice_session.rs
docs/: a2a.md  advanced_tooling.md  aider_cursor_migration.md  analysis_results.md  architecture.md  authentication.md  autonomous_agents.md  benchmarks.md  claude_code_competitor_analysis.md  enterprise_features.md  faq.md  features.md  getting-started.md  improvements_and_issues.md  installation.md  mcp.md  phase1_auth_provider_plan.md  phase_7.md  phase_8.md  plugins.md  providers.md  routing.md  setup.md  troubleshooting.md  usage.md
fuzz/: Cargo.toml
fuzz/fuzz_targets/: config_parser.rs  hook_config.rs  plugin_manifest.rs  sse_parser.rs
homebrew/: arc-cli.rb  arc.rb
scoop/: arc-cli.json  arc.json
src/: app.rs  config.rs  (+5 more)
(+91 files in other folders)
