[package]
name = "arc-tui"
version = "2.0.0"
edition = "2021"
description = "ARC CLI — Production-Grade Agentic Terminal UI"

[dependencies]
ratatui = "0.29"
crossterm = "0.28"
color-eyre = "0.6"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time", "fs"] }
reqwest = { version = "0.12", features = ["json", "stream"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
futures = "0.3"
similar = "2"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
async-trait = "0.1"
dirs = "5"
anyhow = "1"
clap = { version = "4", features = ["derive"] }
