[package]
name = "arc-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
toml = "0.8"
serde_json = "1.0"
regex = "1.11"

[[bin]]
name = "sse_parser"
path = "fuzz_targets/sse_parser.rs"
doc = false

[[bin]]
name = "config_parser"
path = "fuzz_targets/config_parser.rs"
doc = false

[[bin]]
name = "hook_config"
path = "fuzz_targets/hook_config.rs"
doc = false

[[bin]]
name = "plugin_manifest"
path = "fuzz_targets/plugin_manifest.rs"
doc = false
