[package]
rust-version.workspace = true
name = "arc-a2a"
version.workspace = true
edition.workspace = true
description = "Agent-to-Agent protocol implementation for ARC CLI"

[dependencies]
arc-core = { path = "../arc-core" }

# Serialization
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }

# Async runtime
tokio = { workspace = true, features = ["full"] }
tokio-stream = { workspace = true, features = ["sync"] }
futures = { workspace = true }

# HTTP client + server
reqwest = { default-features = false, workspace = true, features = ["json", "stream"] }
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true, features = ["cors", "trace", "compression-gzip", "auth"] }
hyper = { workspace = true }

# Auth & crypto
jsonwebtoken = { workspace = true }
hmac = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }

# Types
uuid = { workspace = true, features = ["v4", "serde"] }
chrono = { workspace = true, features = ["serde"] }
url = { workspace = true }

# State
dashmap = { workspace = true }

# Error handling
thiserror = { workspace = true }
anyhow = { workspace = true }

# Observability
tracing = { workspace = true }

# Utils
base64 = { workspace = true }
rand = { workspace = true }

[lints]
workspace = true
