[package]
name = "arc-bench"
version.workspace = true
edition.workspace = true

[dependencies]
# Dependencies for benchmarking

[[bench]]
name = "swe_bench"
harness = false
arc-core = { path = "../arc-core" }
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
