[package]
rust-version.workspace = true
name = "arc-bench"
version = "0.5.0"
edition = "2021"
description = "Evaluation and benchmarking suite for ARC CLI"

[dependencies]
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
arc-core = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }

[[bench]]
name = "main"
harness = false

[lints]
workspace = true
