[package]
name = "arc-code"
version.workspace = true
edition.workspace = true
description.workspace = true
license.workspace = true
repository.workspace = true
default-run = "arc"

[[bin]]
name = "arc"
path = "src/main.rs"

[dependencies]
arc-ui = { path = "../arc-ui" }
arc-core = { path = "../arc-core" }
arc-router = { path = "../arc-router" }
arc-providers = { path = "../arc-providers" }
arc-tui = { path = "../arc-tui" }
arc-tools = { path = "../arc-tools" }
arc-mcp = { path = "../arc-mcp" }
arc-plugins = { path = "../arc-plugins" }
arc-sandbox = { path = "../arc-sandbox" }

reqwest = { workspace = true, features = ["rustls-tls"] }
keyring.workspace = true

clap.workspace = true
tokio.workspace = true
tokio-util.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
dirs.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tracing-opentelemetry.workspace = true
opentelemetry.workspace = true
opentelemetry_sdk = { workspace = true, features = ["rt-tokio"] }
opentelemetry-otlp.workspace = true
tracing-appender.workspace = true
color-eyre.workspace = true
anyhow.workspace = true
chrono.workspace = true
open = "5.3.2"

ctrlc = "3"
console.workspace = true
futures.workspace = true
clap_complete = "4.6.0"
dialoguer = { version = "0.11.0", features = ["fuzzy-select"] }
walkdir = "2.5.0"
rustyline = "17.0.2"
notify-rust = "4.12.0"
uuid.workspace = true
mimalloc = "0.1.48"
self_update = { version = "0.43.1", features = ["archive-tar", "archive-zip", "compression-zip-bzip2"] }

[lints]
workspace = true
