[package]
rust-version.workspace = true
name = "arc-cloud"
version.workspace = true
edition.workspace = true

[dependencies]
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
reqwest.workspace = true
base64.workspace = true
uuid.workspace = true
async-trait.workspace = true

[lints]
workspace = true
