[package]
rust-version.workspace = true
name = "arc-compact"
version.workspace = true
edition.workspace = true

[dependencies]
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true

# Tokenizer backend
tiktoken-rs = "0.5"
arc-core = { path = "../arc-core" }
arc-providers = { path = "../arc-providers" }

[lints]
workspace = true
