[package]
name = "arc-core"
edition.workspace = true
version.workspace = true
license.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
futures.workspace = true
toml.workspace = true
reqwest.workspace = true
oauth2.workspace = true
keyring.workspace = true
secrecy.workspace = true
sha2.workspace = true
base64.workspace = true
rand.workspace = true
dialoguer.workspace = true
console.workspace = true
indicatif.workspace = true
thiserror.workspace = true
anyhow.workspace = true
tracing.workspace = true
chrono.workspace = true
url.workspace = true
uuid.workspace = true
bytes.workspace = true
smallvec.workspace = true
regex.workspace = true
once_cell.workspace = true
open.workspace = true
dirs = "6.0"
redb.workspace = true
bumpalo.workspace = true
compact_str.workspace = true
tiktoken-rs.workspace = true
hdrhistogram.workspace = true
zeroize = { version = "1", features = ["derive"] }
hex.workspace = true
tokio-util = { version = "0.7", features = ["rt"] }
fs2 = "0.4.3"
serde_yaml = "0.9"
which = "8.0"
[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
tempfile = "3.14"
criterion = { workspace = true }

[[bench]]
name = "memory_compression"
harness = false
