[package]
rust-version.workspace = true
name = "arc-fork"
version = "0.1.0"
edition = "2021"
description = "Session forking, branching, and selective rewind for ARC CLI"

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
redb = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }

[lints]
workspace = true
