[package]
name = "arc-hooks"
version.workspace = true
edition.workspace = true

[dependencies]
arc-core = { path = "../arc-core" }
anyhow.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
serde = { workspace = true, features = ["derive"] }
toml.workspace = true

[lints]
workspace = true
