[package]
rust-version.workspace = true
name = "arc-loop"
version.workspace = true
edition.workspace = true

[dependencies]
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
chrono.workspace = true
notify.workspace = true

[lints]
workspace = true
