[package]
rust-version.workspace = true
name = "arc-mcp"
version.workspace = true
edition.workspace = true

[dependencies]
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
reqwest.workspace = true
sha2.workspace = true

[lints]
workspace = true
