[package]
rust-version.workspace = true
name = "arc-plan"
version.workspace = true
edition.workspace = true

[dependencies]
arc-core = { version = "0.5.0", path = "../arc-core" }
arc-providers = { path = "../arc-providers" }
arc-tools = { path = "../arc-tools" }
arc-hooks = { path = "../arc-hooks" }
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
tracing.workspace = true
uuid.workspace = true
chrono.workspace = true
regex.workspace = true
glob = "0.3.3"
async-recursion = "1.1.1"

[lints]
workspace = true
