[package]
name = "arc-providers"
edition.workspace = true
version.workspace = true
license.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
arc-core = { workspace = true }
tokio.workspace = true
reqwest = { default-features = false, workspace = true, features = ["rustls-tls", "stream"] }
serde.workspace = true
serde_json.workspace = true
futures.workspace = true
bytes.workspace = true
tracing.workspace = true
thiserror.workspace = true
anyhow.workspace = true
smallvec.workspace = true
zeroize.workspace = true
tokio-util.workspace = true
async-trait = "0.1"
memchr.workspace = true

[dev-dependencies]
criterion.workspace = true

[[bench]]
name = "streaming_parse"
harness = false
