[package]
name = "arc-repomap"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description.workspace = true
repository.workspace = true

[dependencies]
anyhow.workspace = true
ignore.workspace = true
tree-sitter.workspace = true
tree-sitter-rust = "0.21.0"

[lints]
workspace = true
