[package]
name = "arc-router"
version.workspace = true
edition.workspace = true

[dependencies]
arc-providers = { path = "../arc-providers" }
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
dashmap.workspace = true
anyhow.workspace = true
futures.workspace = true
