[package]
name = "arc-tui"
version = "0.1.0"
edition = "2024"

[dependencies]
crossterm = "0.29"
tokio = { version = "1", features = ["rt", "time", "sync", "signal", "macros"] }
tokio-stream = "0.1"
color-eyre = "0.6"

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
color-eyre = "0.6"

[lints]
workspace = true
