[package]
name = "arc-voice"
version.workspace = true
edition.workspace = true

[dependencies]
tokio.workspace = true
tokio-tungstenite.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
futures.workspace = true
bytes.workspace = true
crossterm.workspace = true
base64.workspace = true
uuid.workspace = true
chrono.workspace = true
reqwest.workspace = true
flume.workspace = true
cpal = "0.17"
rubato = "0.15"
hound = "3.5"

[lints]
workspace = true
